feat: overview, fault log, fault trace support multiple service and namespace query
