# backend/pkg/api/serviceoverview/func_getendpointsdata.go
@@ -22,7 +22,8 @@ import (
 // @Param startTime query int64 true "查询开始时间"
 // @Param endTime query int64 true "查询结束时间"
 // @Param step query int64 true "步长"
-// @Param serviceName query string false "名称"
+// @Param serviceName query []string false "服务名称" collectionFormat(multi)
+// @Param namespace query []string true "命名空间" collectionFormat(multi)
 // @Param sortRule query int true "排序逻辑"
 // @Param Authorization header string false "Bearer accessToken"
 // @Success 200 {object} response.ServiceEndPointsRes
@@ -47,9 +48,9 @@ func (h *handler) GetEndPointsData() core.HandlerFunc {
 		sortRule := serviceoverview.SortType(req.SortRule)
 
 		filter := serviceoverview.EndpointsFilter{
-			ContainsSvcName:      req.ServiceName,
+			MultiService:         req.ServiceName,
 			ContainsEndpointName: req.EndpointName,
-			Namespace:            req.Namespace,
+			MultiNamespace:       req.Namespace,
 		}
 
 		data, err := h.serviceoverview.GetServicesEndPointData(startTime, endTime, step, filter, sortRule)
