# backend/pkg/model/request/log_req.go
@@ -1,16 +1,17 @@
 package request
 
 type GetFaultLogPageListRequest struct {
-	StartTime   int64  `json:"startTime" binding:"min=0"`                    // 查询开始时间
-	EndTime     int64  `json:"endTime" binding:"required,gtfield=StartTime"` // 查询结束时间
-	Service     string `json:"service"`                                      // 查询服务名
-	Instance    string `json:"instance"`                                     // 实例名
-	NodeName    string `json:"nodeName"`                                     // 主机名
-	ContainerId string `json:"containerId"`                                  // 容器名
-	Pid         uint32 `json:"pid"`                                          // 进程号
-	TraceId     string `json:"traceId"`                                      // TraceId
-	PageNum     int    `json:"pageNum"`                                      // 第几页
-	PageSize    int    `json:"pageSize"`                                     // 每页显示条数
+	StartTime   int64    `json:"startTime" binding:"min=0"`                    // 查询开始时间
+	EndTime     int64    `json:"endTime" binding:"required,gtfield=StartTime"` // 查询结束时间
+	Service     []string `json:"service" binding:"required"`                   // 查询服务名
+	Namespaces  []string `json:"namespaces"`
+	Instance    string   `json:"instance"`    // 实例名
+	NodeName    string   `json:"nodeName"`    // 主机名
+	ContainerId string   `json:"containerId"` // 容器名
+	Pid         uint32   `json:"pid"`         // 进程号
+	TraceId     string   `json:"traceId"`     // TraceId
+	PageNum     int      `json:"pageNum"`     // 第几页
+	PageSize    int      `json:"pageSize"`    // 每页显示条数
 }
 
 type GetFaultLogContentRequest struct {
