# backend/pkg/model/request/service_req.go
@@ -73,8 +73,9 @@ type GetK8sEventsRequest struct {
 }
 
 type GetServiceListRequest struct {
-	StartTime int64 `form:"startTime" binding:"min=0"`                    // 查询开始时间
-	EndTime   int64 `form:"endTime" binding:"required,gtfield=StartTime"` // 查询结束时间
+	StartTime int64    `form:"startTime" binding:"min=0"`                    // 查询开始时间
+	EndTime   int64    `form:"endTime" binding:"required,gtfield=StartTime"` // 查询结束时间
+	Namespace []string `form:"namespace"`
 }
 
 type GetServiceInstanceListRequest struct {
@@ -112,9 +113,9 @@ type GetServiceEndPointListRequest struct {
 }
 type GetEndPointsDataRequest struct {
 	// 筛选条件
-	ServiceName  string `form:"serviceName"`  // 应用名,包含匹配
-	EndpointName string `form:"endpointName"` // 端点名,包含匹配
-	Namespace    string `form:"namespace"`    // 指定命名空间,完全匹配
+	ServiceName  []string `form:"serviceName"`                  // 应用名,包含匹配
+	Namespace    []string `form:"namespace" binding:"required"` // 指定命名空间,完全匹配
+	EndpointName string   `form:"endpointName"`                 // 端点名,包含匹配
 
 	// 查询条件
 	StartTime int64 `form:"startTime" binding:"required"`                 // 查询开始时间
